<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context="workout">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workouts"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/categories"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/item_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="Workout name" />



        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/what_is_your_current_working_weight" />

        <EditText
            android:id="@+id/reps_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/how_many_reps" />

        <EditText
            android:id="@+id/record_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/what_is_your_current_pr" />



        <Button
            android:id="@+id/add_button"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/add" />

</LinearLayout>

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_on_workout_to_edit"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/user_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_on_workout_to_edit"
        android:textSize="12sp"/>


        <ListView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>