<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".account">

    <TextView
        android:id="@+id/title"
        android:text="@string/account"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"/>

    <Button
        android:id="@+id/profile_button"
        android:text="@string/profile"
        android:layout_width="200dp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/share_button"
        android:text="@string/share"
        android:layout_width="200dp"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/notification" />




</LinearLayout>