<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routine"
        android:gravity="top"
        android:textSize="30sp" />

    <Button
        android:id="@+id/myRoutineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_routine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/presetRoutineButton"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="60sp"/>

    <Button
        android:id="@+id/presetRoutineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preset_routine"
        app:layout_constraintTop_toBottomOf="@+id/myRoutineButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="60sp"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="1" />
    

</LinearLayout>